# ncku-chatbot

./: .gitignore  README.md  README_zh-TW.md  crawler_testing.py  dump.rdb  test.txt  update_activity_kb.py
.github/workflows/: daily_activity-run.yml
crawler/: requirements.txt
crawler/MRE_root/: activity_mre.py  business_classification.py  crawl_sitemap.py  dorm-rules.py  news.py  sitemap.py
crawler/MRE_root/admin_procedure/: README.md  main.py  (+5 more)
crawler/MRE_root/club/: README.md  club_data.py  club_regulations.py  pyproject.toml
crawler/api/: __init__.py  activit_api.py
crawler/config/: __init__.py
crawler/core/: __init__.py  base_crawler.py  selenium_crawler.py
crawler/dorm/: business_classification.py  crawl_sitemap.py  dorm-rules.py
crawler/utils/: tool.py
dify/: README.md  knowledge_base_list.json  pyproject.toml
dify/knowledge_base/: api.py  main.py
linebot/: .env.example  .gitignore  README.md  pyproject.toml
linebot/app/: main.py
linebot/app/api/: __init__.py  dify.py  speech.py  vision.py
linebot/app/api/utils/: openai_api.py
linebot/app/api/vision_gpt/: main.py  pyproject.toml
linebot/app/api/vision_gpt/utils/: openai_api.py
linebot/app/config/: line_config.py  logger.py
linebot/app/db/: redis_client.py
linebot/app/models/: user.py
linebot/app/repositories/: user_repository.py
linebot/app/routers/: chat.py  linebot.py
linebot/app/services/: message_service.py  postback_service.py  welcome_service.py
linebot/app/services/handlers/: __init__.py  audio_handler.py  common.py  image_handler.py  postback.py  text_handler.py
linebot/app/services/utils/: __init__.py
linebot/app/webhooks/: handlers.py
linebot/flex_messages/welcome/: 1.json  language.json  role.json  terms.json
richmenu/: README.md  richmenu_deploy_page1.sh  richmenu_deploy_page2.sh  richmenu_deploy_page3.sh
script/activity/: crawler_activity.py  update_activity_kb.py
workflow_test/: README.md  main.py  pyproject.toml
(+30 files in other folders)
