[project]
name = "club"
version = "0.1.0"
description = ""
authors = [
  { name = "LinMarc1210", email = "marc1210899@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "selenium (>=4.31.0,<5.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "pdfplumber (>=0.11.6,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
